cmake_minimum_required(VERSION 3.21)
project(311144406_315720011_ex5)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(311144406_315720011_ex5
        Assignment5.cpp
        DiligentRoom.h
        DiligentStudent.cpp
        DiligentStudent.h
        Error.h
        idexception.h
        Invaliddetails.h
        LazyRoom.h
        LazyStudent.cpp
        LazyStudent.h
        ResponsibleStudent.cpp
        ResponsibleStudent.h
        Room.cpp
        Room.h
        Splitbefore.h
        Student.cpp
        Student.h
        Studentpermissions.h
        ZoomSys.cpp
        ZoomSys.h)
